dhall/tests/type-errors/unit/MergeEmptyWithoutAnnotation.txt
Type error: error: Merge2ArgMustBeUnionOrOptional
 --> <current file>:1:0
  |
1 | merge {=} <>
  | ^^^^^^^^^^^^ Merge2ArgMustBeUnionOrOptional
  |
